--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -96,7 +96,7 @@ button:active {
 }
 
 .numbers .dot {
-  border-left: 1px black;
+  border-left: 1px rgb(31, 30, 30);
 }
 
 .operators .key {
@@ -106,5 +106,5 @@ button:active {
 }
 
 .calculator .operators {
-  background: linear-gradient(to bottom, rgba(252, 156, 23, 1) 0%, rgba(247, 126, 27, 1) 100%);
+  background: linear-gradient(to bottom, rgb(248, 155, 25) 0%, rgb(238, 121, 26) 100%);
 }
