--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -9,10 +9,20 @@ body {
 }
 
 .container {
-  height: 100vh;
+  height: 90vh;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
+  max-width: 92%;
+  margin: 0 auto;
+}
+
+.inspiration {
+  align-self: baseline;
+  padding-top: 30px;
+  font-weight: 700;
+  font-size: 34px;
+  letter-spacing: 3px;
 }
 
 .calculator {
@@ -96,15 +106,15 @@ button:active {
 }
 
 .numbers .dot {
-  border-left: 1px rgb(31, 30, 30);
+  border-left: 1px black;
 }
 
 .operators .key {
   color: white;
   border-right: 0;
-  font-size: 2em;
+  font-size: 3em;
 }
 
 .calculator .operators {
-  background: linear-gradient(to bottom, rgb(248, 155, 25) 0%, rgb(238, 121, 26) 100%);
+  background: linear-gradient(to bottom, rgba(252, 156, 23, 1) 0%, rgba(247, 126, 27, 1) 100%);
 }
